# JKSV

./: .Makefile.kate-swp  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GD_INSTRUCTIONS.MD  JKSV.7z  JKSV.lst  JKSV.nro  JKSV_Settings_ENG.MD  Makefile  README.MD  REMOTE_INSTRUCTIONS.MD
Include/: Colors.hpp  Config.hpp  Input.hpp  JKSV.hpp  JSON.hpp  Logger.hpp  StringUtil.hpp  Strings.hpp
Include/AppStates/: AppState.hpp  BackupMenuState.hpp  ExtrasMenuState.hpp  MainMenuState.hpp  ProgressState.hpp  SettingsState.hpp  TaskState.hpp  TextTitleSelectState.hpp  TitleSelectCommon.hpp  TitleSelectState.hpp
Include/Data/: AccountUID.hpp  Data.hpp  TitleInfo.hpp  User.hpp
Include/System/: ProgressTask.hpp  Task.hpp
JKSV/: Makefile
Source/: Config.cpp  Input.cpp  JKSV.cpp  Logger.cpp  Main.cpp  StringUtil.cpp  Strings.cpp
inc/: JSON.hpp  cfg.h  clsui.h  config.hpp  curlfuncs.h  data.h  ex.h  file.h  fld.h  fm.h  fs.h  fsfile.h  fsthrd.h  gd.h  gfx.h  jksv.hpp  kb.h  ldn.h  menu.h  miscui.h  rfs.h  sett.h  stringUtil.hpp  sys.h  ttl.h  txtui.h  type.h  ui.h  uistr.h  uistrmap.h  uiupdate.h  usr.h  util.h  webdav.h
include/: jksv.hpp  log.hpp  stringUtil.hpp
romfs/: it.txt
source/: config.cpp  jksv.cpp  main.cpp  stringUtil.cpp
src/: cfg.cpp  clsui.cpp  config.cpp  curfuncs.cpp  curlfuncs.cpp  data.cpp  ex.c  file.cpp  fs.cpp  fsfile.c  fsthrd.cpp  gd.cpp  gfx.c  gfx.cpp  jksv.cpp  kb.cpp  ldn.cpp  log.cpp  main.cpp  menu.cpp  miscui.cpp  stringUtil.cpp  sys.cpp  type.cpp  ui.cpp  ui.cpp.save-failed  util.cpp  webdav.cpp
(+319 files in other folders)
